# to_do_list

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_push.yaml
bot/: admin.py  models.py
bot/management/commands/: runbot.py  test_bot.py
bot/migrations/: 0001_initial.py
bot/tg/: client.py  schemas.py
core/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_object.py  0006_create_new_object.py  0007_alter_goalcategory_board.py
goals/views/: boards.py  categories.py  comments.py  goals.py
to_do_app/: settings.py
to_do_list/: models.py  settings.py  urls.py
