[tool.poetry]
name = "to-do-app"
version = "0.1.0"
description = ""
authors = ["Serafim <serafimabove@mail.ru>"]
readme = "README.md"
packages = [{include = "to_do_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
